added before element

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                         them
                         unique from the rest. Each member of the team played an essential role and consistently met our
                         expectations."</p>
-                    <div class="text-white"><img src="./assets/images/robin-avatar.png" alt="">
+                    <div class="text-white mt-4"><img src="./assets/images/robin-avatar.png" alt="">
                         <h4 class="mt-4">Robin Kelly</h4>
                         <p class="text-orange">CEO</p>
                     </div>
